welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: Boolean(true) does not take parameters
			     { gauche; true()
                                           ^SnakeBuggle:30: error: Boolean(true) does not take parameters
			     	  {droite; true()
                                               ^